# L3-project

./: .gitattributes  BUILD.md  README.md  pyproject.toml
.github/workflows/: build-pdf.yml  deploy-slides.yml
document/: L3_Design_Document.md  L3_Failure_Analysis.md  README.md
ork_files/: Black_Brant_Simulations.ork  Black_Brant_Simulations_trimmed.xml  ork_extract.sh
pdf-viewer/: SETUP.md  example.html  failure-analysis.html  giscus-config.js  index.html  style.css
slides/: README.md  index.html  slides.md
slides/images/: IMG_9260.HEIC  IMG_9282.HEIC  IMG_9283.HEIC
