[project]
name = "level-3-slides"
version = "0.1.0"
description = "Python environment for construction of L3 project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=6.25.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.ipynb", "*.md", "*.sh", "*.txt"]
[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.0.0",
]
